fix: private questions and answers
